...
    <Button
        android:id="@+id/enlarged_imageCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enlarged_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
...
